# tiered-cinnamon-forecast

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: README.md
docs/: Cinnamon_Export_Sales_Forecasting_Assignment (1).docx  DATA_ACCESS.md  PROJECT_EXPLAINED.md  run-and-submission-guide.md
notebooks/: 01_eda.ipynb  01_eda_raw.ipynb  02_feature_eda.ipynb  03_model_results.ipynb
outputs/metrics/: model_comparison.csv
outputs/models/country_demo/: forecast.csv
outputs/models/high_volume/: final_forecast.parquet  timing.json  validation_predictions.parquet
outputs/models/sparse/: final_forecast.parquet  timing.parquet  validation_predictions.parquet
src/: assemble_forecast.py  backtest.py  cleaning.py  features.py  logging_utils.py  metrics.py  report_assets.py  scoping.py  tiering.py
src/models/: categorical.py  country_demo.py  high_volume.py  sparse.py
src/tiered_cinnamon_forecast/: __init__.py
tests/: conftest.py  test_assemble_forecast.py  test_backtest.py  test_features.py  test_metrics.py  test_models_categorical.py  test_models_sparse.py  test_report_assets.py
